--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -6,12 +6,12 @@
 
     <ImageView
             android:id="@+id/videoItemThumbnailImageView"
-            android:layout_width="60"
-            android:layout_height="60"/>
+            android:layout_width="60dp"
+            android:layout_height="60dp"/>
 
     <TextView
             android:id="@+id/videoItemTitleTextView"
-            android:layout_width="120"
-            android:layout_height="60"/>
+            android:layout_width="120dp"
+            android:layout_height="60dp"/>
 
 </LinearLayout>
