--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -11,6 +11,7 @@
 
     <TextView
             android:id="@+id/videoItemTitleTextView"
+            android:layout_marginLeft="10dp"
             android:layout_width="120dp"
             android:layout_height="60dp"/>
 
